[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "iframe_teaching_notes"
authors = [{name = "Thomas Kluyver", email = "thomas@kluyver.me.uk"}]
readme = "README.rst"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = ["jupyter-server-proxy >=4.0"]  # v4 required for Unix socket support
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/arang129/iframe_teaching_notes"

[project.entry-points.jupyter_serverproxy_servers]
iframe_teaching_notes = "iframe_teaching_notes:setup_iframe_teaching_notes"
